# cargo-fluent

./: .gitignore  Cargo.toml  README.md
show/: Cargo.toml  example.rs
show/src/: main.rs
src/: arg_validators.rs  cli.rs  error.rs  lib.rs  main.rs  path_utils.rs
src/cli/: mod.rs  path_pattern.rs  spec.rs
src/cmd_scan/: cmd.rs
src/commands/: mod.rs
src/commands/convert/: cmd.rs  entry.rs  info_helpers.rs  mod.rs  po_file.rs  po_list.rs  registry.rs
src/commands/edit/: cmd.rs  mod.rs
src/commands/scan/: cmd.rs
src/config/: create_config.rs  infos.rs  mod.rs  path_helper.rs  read_toml.rs
src/config/files/: cargo.rs  i18n.rs  mod.rs
src/files/: mod.rs  pofile.rs  positions.rs
src/files/fluent/: decoder.rs  group.rs  helpers.rs  informations.rs  message.rs  mod.rs  pattern_stringifier.rs
src/files/fluent/file/: entry.rs  mod.rs  reader.rs  writer.rs
src/files/pofile/: comment.rs  file.rs  mod.rs  note.rs  unit.rs
src/files/source/: error.rs  message.rs  messages.rs  mod.rs  origin.rs  parser.rs
src/files/source/macro_parser/: fluent.rs  mod.rs
src/files/source/macro_parser/gettext/: mod.rs  parser.rs  plural.rs
